2007-02-05  Fred Kiefer <FredKiefer@gmx.de>

	* Document.m (-windowControllerDidLoadNib:):
	Allow undo.
	* English.lproj/MainMenu.gorm: Converted to current Gorm format and add undo
	menu entries.
	
2005-10-14  Fred Kiefer <FredKiefer@gmx.de>

	* Document.m (-windowControllerDidLoadNib:):
	Added a vertical ruler view.
	
2005-07-17  Adam Fedor  <fedor@gnu.org>

	* Convert Ink to use gorm files.
	* Document.m: Remove programmatic window creating. Add nib name.
	* GNUmakefile: Add gorm resource files.
	* main.m: Remove programmatic gui.
	* Readme.rtf: Update.
	* Document.gorm, English.lproj: New.
	(Patches from Rob Burns).

Mon Apr 28 13:22:49 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Document.m ([Document -makeWindow]): Do not make the document
	the window delegate.

2003-04-24  Adam Fedor  <fedor@gnu.org>

	* InkInfo.plist: Add new Icon images
	* GNUmakefile: Install new images.
	(Icons and patches from Rob Burns <rburns@softhome.net>).

2003-04-09  Adam Fedor  <fedor@gnu.org>

	* main.m: In application delegate implement ([application:openFile:])
	so we will open rtf files; 

2002-11-01  Adam Fedor  <fedor@gnu.org>

	* main.m: Don't set NSDocumentController as app delegate
	(set automatically now in gui).

2002-04-03  Fred Kiefer <FredKiefer@gmx.de>

	* Document.m
	Added a horizontal ruler view in [makeWindow].
	* main.m
	Restructured all the menu creation. Release the delegate when no
	longer needed in [applicationDidFinishLaunching:]. 
	
Wed Feb 20 19:25:20 2002  Nicola Pero  <nicola@brainstorm.co.uk>

	Removed the memory panel, now available in the gui library
	for all applications.
	* GNUmakefile: Do not link to the memory panel classes; do
	not compile the memory panel.
	* main.m: Do not include MemoryPanel.h
	* main.m ([MyDelegate -applicationWillFinishLaunching:]): Do not
	add the memory panel submenu.  Click on the application icon in
	the info panel to get the memory panel now.
	
	* GNUmakefile (Ink_HEADERS): variable unused removed.
