@@ -1,3 +1,8 @@
+2007-10-01  Fred Kiefer <FredKiefer@gmx.de>
+
+	* Document.m (-textDidChange:): Only change update count if there
+	is no undo manager. Patch by Wolfgang Lux <wolfgang.lux@gmail.com>. 
+
 2007-02-05  Fred Kiefer <FredKiefer@gmx.de>
 
 	* Document.m (-windowControllerDidLoadNib:):
